--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "ts-node --esm src/server.ts",
+    "server:dev": "nodemon --exec ts-node --esm src/server.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -42,14 +44,17 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.56.2",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "input-otp": "^1.2.4",
     "lancedb": "^0.0.1",
@@ -57,17 +62,21 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^5.0.375",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.30.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^5.8.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "remarkable": "^2.0.1",
     "remarkable-react": "^1.4.3",
     "sonner": "^1.5.0",
@@ -96,9 +105,11 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
-    "tempo-devtools": "^2.0.95",
+    "tempo-devtools": "^2.0.69",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
